# solana_MEV

./: .gitignore  LICENSE  README.md  all_run.sh  arbitrage.py  arbitrages.jsonl  coinmarketcap.py  creator_attackers.json  helius_rpc_details.py  hours.txt  hours_analisys.py  hours_analisys_part2.py  meme_and_shitcoins_list.csv  memecoin.py  memecoin_ending.py  mint_transaction.py  p.py  read_sandwich.py  report.py  requirements.txt  sandwich.json  sandwich.jsonl  sandwich.py  sandwich_dashboard.py  sandwich_integrity_check.py  token_analisys.py  verified_attacks.json  verified_attacks_complete.json
analisys/: analisi_bot_memecoin.py  arbitrages_analisys.py  complete_analisys.py  hours_analisys.py  revenue_analisys.py  sandwiches_analisys.py
analysis/: analisi_arbitraggi.py  analisi_congiunta.py  analisi_revenue.py  analisi_sandwich.py  analisi_validatori.py  arbitrage_analysis.py  compute_units_analysis.py  memecoin_analysis.py
analysis/plot/: num_mev.py  plotMemecoin.py  plot_dex.py  plot_num_MEV.py
assets/: style.css
dataset/: Cargo.toml  download_block.py  run_check.py  sandwich_detector.py
dataset/engine/: lib.rs
plot/: num_bot_MEV.py  num_mev.py  plot_dex.py  plot_num_MEV.py  plot_revMedio.py  plot_tot.py  plot_unique_bot.py  plot_validator.py
src/: memecoin_pumpfun.py  sandwich.py
src/core/: helius_rpc_details.py
src/core/memecoin/: memecoin_ending.py  memecoin_pumpfun.py
src/validator/: mapping.py  resolve_slots.py  validator_analisys.py
validator/: mapping.py  resolve_slots.py  validator_analisys.py
